Developer/src/objects/GoodsCriteria__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>カテゴリ</label>
        <picklist>
            <picklistValues>
                <fullName>ｳｪｯﾄﾃｨｯｼュ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ｴｱﾌﾚｯｼｭﾅｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>おむつ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ｼｬﾝﾌﾟｰ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ﾄﾘｰﾄﾒﾝﾄ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>液体用洗剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>柔軟剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>食器用洗剤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対面販売化粧品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>電動歯ﾌﾞﾗｼ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PriceFrom__c</fullName>
        <label>標準価格(From)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceTo__c</fullName>
        <label>標準価格(To)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>～以降に販売された商品</label>
        <type>Date</type>
    </fields>
    <label>販売商品検索条件</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>販売商品検索条件名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>